--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.17.0</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>seleniumwebdriver</groupId>
 			<artifactId>seleniumwebdriver</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
