--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.11.0</version>
-			<scope>test</scope>
+			<version>7.8.0</version>
+			<!--<scope>test</scope>-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 		<dependency>
@@ -97,10 +97,16 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.5.3</version>
+		</dependency>
+
 		<!--<dependency>
 			<groupId>seleniumwebdriver</groupId>
 			<artifactId>seleniumwebdriver</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			&lt;!&ndash;<version>0.0.1-SNAPSHOT</version>&ndash;&gt;
 		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
 		<dependency>
